force-app/main/default/objects/Save_Game__c/Save_Game__c.object-meta.xml
<CustomObject>
    <label>Save Game</label>
    <pluralLabel>Save Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Save Game Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>