force-app/main/default/objects/Save_Game__c/fields/Anarcho_liberal__c.field-meta.xml
<CustomField>
    <fullName>Anarcho_liberal__c</fullName>
    <label>Anarcho liberal</label>
    <type>Lookup</type>
    <referenceTo>AnarchoLiberal__c</referenceTo>
    <relationshipName>Save_Game_Anarcho_liberal</relationshipName>
</CustomField>