force-app/main/default/objects/Save_Game__c/fields/Automate_sliders__c.field-meta.xml
<CustomField>
    <fullName>Automate_sliders__c</fullName>
    <label>Automate sliders</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>