force-app/main/default/objects/Save_Game__c/fields/Automate_trade__c.field-meta.xml
<CustomField>
    <fullName>Automate_trade__c</fullName>
    <label>Automate trade</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>