force-app/main/default/objects/Save_Game__c/fields/Budget_balance__c.field-meta.xml
<CustomField>
    <fullName>Budget_balance__c</fullName>
    <label>Budget balance</label>
    <type>Lookup</type>
    <referenceTo>Budget_balance__c</referenceTo>
    <relationshipName>Save_Game_Budget_balance</relationshipName>
</CustomField>