force-app/main/default/objects/Save_Game__c/fields/Canals__c.field-meta.xml
<CustomField>
    <fullName>Canals__c</fullName>
    <label>Canals</label>
    <type>Lookup</type>
    <referenceTo>Canals__c</referenceTo>
    <relationshipName>Save_Game_Canals</relationshipName>
</CustomField>