force-app/main/default/objects/Save_Game__c/fields/Combat__c.field-meta.xml
<CustomField>
    <fullName>Combat__c</fullName>
    <label>Combat</label>
    <type>Lookup</type>
    <referenceTo>Combat__c</referenceTo>
    <relationshipName>Save_Game_Combat</relationshipName>
</CustomField>