force-app/main/default/objects/Save_Game__c/fields/Communist__c.field-meta.xml
<CustomField>
    <fullName>Communist__c</fullName>
    <label>Communist</label>
    <type>Lookup</type>
    <referenceTo>Communist__c</referenceTo>
    <relationshipName>Save_Game_Communist</relationshipName>
</CustomField>