force-app/main/default/objects/Save_Game__c/fields/Crisis_manager__c.field-meta.xml
<CustomField>
    <fullName>Crisis_manager__c</fullName>
    <label>Crisis manager</label>
    <type>Lookup</type>
    <referenceTo>CrisisManager__c</referenceTo>
    <relationshipName>Save_Game_Crisis_manager</relationshipName>
</CustomField>