force-app/main/default/objects/Save_Game__c/fields/Diplomacy__c.field-meta.xml
<CustomField>
    <fullName>Diplomacy__c</fullName>
    <label>Diplomacy</label>
    <type>Lookup</type>
    <referenceTo>Diplomacy__c</referenceTo>
    <relationshipName>Save_Game_Diplomacy</relationshipName>
</CustomField>