force-app/main/default/objects/Save_Game__c/fields/Fascist__c.field-meta.xml
<CustomField>
    <fullName>Fascist__c</fullName>
    <label>Fascist</label>
    <type>Lookup</type>
    <referenceTo>Fascist__c</referenceTo>
    <relationshipName>Save_Game_Fascist</relationshipName>
</CustomField>