force-app/main/default/objects/Save_Game__c/fields/Fired_events__c.field-meta.xml
<CustomField>
    <fullName>Fired_events__c</fullName>
    <label>Fired events</label>
    <type>Lookup</type>
    <referenceTo>Fired_events__c</referenceTo>
    <relationshipName>Save_Game_Fired_events</relationshipName>
</CustomField>