force-app/main/default/objects/Save_Game__c/fields/Gameplaysettings__c.field-meta.xml
<CustomField>
    <fullName>Gameplaysettings__c</fullName>
    <label>Gameplaysettings</label>
    <type>Lookup</type>
    <referenceTo>Gameplay_Settings__c</referenceTo>
    <relationshipName>Save_Game_Gameplaysettings</relationshipName>
</CustomField>