force-app/main/default/objects/Save_Game__c/fields/Government__c.field-meta.xml
<CustomField>
    <fullName>Government__c</fullName>
    <label>Government</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>