force-app/main/default/objects/Save_Game__c/fields/Great_nations__c.field-meta.xml
<CustomField>
    <fullName>Great_nations__c</fullName>
    <label>Great nations</label>
    <type>Lookup</type>
    <referenceTo>Great_nations__c</referenceTo>
    <relationshipName>Save_Game_Great_nations</relationshipName>
</CustomField>