force-app/main/default/objects/Save_Game__c/fields/Great_wars_enabled__c.field-meta.xml
<CustomField>
    <fullName>Great_wars_enabled__c</fullName>
    <label>Great wars enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>