force-app/main/default/objects/Save_Game__c/fields/Invention__c.field-meta.xml
<CustomField>
    <fullName>Invention__c</fullName>
    <label>Invention</label>
    <type>Lookup</type>
    <referenceTo>Invention__c</referenceTo>
    <relationshipName>Save_Game_Invention</relationshipName>
</CustomField>