force-app/main/default/objects/Save_Game__c/fields/News_collector__c.field-meta.xml
<CustomField>
    <fullName>News_collector__c</fullName>
    <label>News collector</label>
    <type>Lookup</type>
    <referenceTo>News_collector__c</referenceTo>
    <relationshipName>Save_Game_News_collector</relationshipName>
</CustomField>