force-app/main/default/objects/Save_Game__c/fields/Outliner__c.field-meta.xml
<CustomField>
    <fullName>Outliner__c</fullName>
    <label>Outliner</label>
    <type>Lookup</type>
    <referenceTo>Outliner__c</referenceTo>
    <relationshipName>Save_Game_Outliner</relationshipName>
</CustomField>