force-app/main/default/objects/Save_Game__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <type>Text</type>
    <length>255</length>
</CustomField>