force-app/main/default/objects/Save_Game__c/fields/Player_monthly_pop_growth__c.field-meta.xml
<CustomField>
    <fullName>Player_monthly_pop_growth__c</fullName>
    <label>Player monthly pop growth</label>
    <type>Lookup</type>
    <referenceTo>PlayerMonthlyPopGrowth__c</referenceTo>
    <relationshipName>Save_Game_Player_monthly_pop_growth</relationshipName>
</CustomField>