force-app/main/default/objects/Save_Game__c/fields/Player_monthly_pop_growth_date__c.field-meta.xml
<CustomField>
    <fullName>Player_monthly_pop_growth_date__c</fullName>
    <label>Player monthly pop growth date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>