force-app/main/default/objects/Save_Game__c/fields/Rebel__c.field-meta.xml
<CustomField>
    <fullName>Rebel__c</fullName>
    <label>Rebel</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>