force-app/main/default/objects/Save_Game__c/fields/Socialist__c.field-meta.xml
<CustomField>
    <fullName>Socialist__c</fullName>
    <label>Socialist</label>
    <type>Lookup</type>
    <referenceTo>Socialist__c</referenceTo>
    <relationshipName>Save_Game_Socialist</relationshipName>
</CustomField>