force-app/main/default/objects/Save_Game__c/fields/Start_pop_index__c.field-meta.xml
<CustomField>
    <fullName>Start_pop_index__c</fullName>
    <label>Start pop index</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>