force-app/main/default/objects/Save_Game__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>