force-app/main/default/objects/Save_Game__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>