force-app/main/default/objects/Save_Game__c/fields/Worldmarket__c.field-meta.xml
<CustomField>
    <fullName>Worldmarket__c</fullName>
    <label>Worldmarket</label>
    <type>Lookup</type>
    <referenceTo>Worldmarket__c</referenceTo>
    <relationshipName>Save_Game_Worldmarket</relationshipName>
</CustomField>